cleanup, remove obsolete methods